# heidihack25

./: .gitignore  README.md  download_profiles.py  frontend.py  gui_app.py  heidi_mock_api.py  main.py  pyproject.toml  requirements.txt
config/openmrs/: config.json
emr_profiles/dental4windows/: config.json
emr_profiles/open-mrs/: config.json
emr_profiles/openmrstest/: config.json
emr_profiles/openmrsv2/: config.json
emr_profiles/openmrsv3/: config.json
emr_profiles/openmrsv4/: config.json
emr_profiles/openmrsv7/: config.json
emr_profiles/test/: config.json
