[tool.poetry]
name = "heidihack25"
version = "0.1.0"
description = "A basic Python project"
authors = ["You <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
